# bionic_with_eval

./: README.md  main.py  setup.cfg
bionic/: train.py
bionic/model/: layers.py  loss.py  model.py
bionic/tests/: test_train.py
bionic/utils/: common.py  config_parser.py  plotter.py  preprocessor.py  sampler.py
bioniceval/: eval_coannotation.py  eval_function_prediction.py  eval_module_detection.py  main.py  plotting.py  state.py  utils.py
bioniceval/config/: fig2a_config.json  fig3a_config.json  funcpred.json
bioniceval/evals/: coannotation.py  function_prediction.py  module_detection.py
bioniceval/plotting/: plotting.py
bioniceval/utils/: file_utils.py  process_config.py
