[metadata]
name = bionic

[options]
zip_safe = False
packages = find:

[option]
install_requires =
    Pillow
    PyWavelets
    certifi
    cffi
    chardet
    colorama
    cycler
    decorator
    googledrivedownloader
    h5py
    idna
    imageio
    isodate
    joblib
    kiwisolver
    llvmlite
    matplotlib
    networkx
    numba
    numpy
    olefile
    pandas
    plyfile
    pycparser
    pyparsing
    pytest
    python-dateutil
    pytz
    rdflib
    requests
    scikit-image
    scikit-learn
    scipy
    six
    tensorboard
    typer[all]
    urllib3

[options.packages.find]
where = bionic
